--- a/app/ClientApp/package.json
+++ b/app/ClientApp/package.json
@@ -17,6 +17,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-simple-image-slider": "^2.4.1",
     "reactstrap": "^8.9.0",
     "rimraf": "^2.6.2",
     "styled-components": "^5.3.3",
